<resources>
    <string name="app_name">Artventure</string>
    <string name="menu_home">홈</string>
    <string name="menu_favorite">즐겨찾기</string>
    <string name="search_collection">소장품 검색</string>
    <string name="title_home_tab">서울시립미술관</string>
    <string name="search_hint">검색어를 입력하세요</string>
    <string name="search_failure_desc">다른 검색어를 입력하거나\n 철자와 띄어쓰기를 확인해보세요.</string>
    <string name="mnfct_year_ascending_order">제작년도 오름차순</string>
    <string name="sector">부문</string>
    <string name="search">검색하기</string>
    <string name="warning_empty_search_word">"검색어를 입력해주세요"</string>
    <string name="warning_last_search_word">"마지막 검색 결과입니다."</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="favorite_confirm">추가하기</string>
    <string name="favorite_dismiss">아니오</string>
    <string name="favorite_dialog_desc">즐겨찾기에 추가할까요?</string>
    <string name="author">작가명</string>
    <string name="mnft_year">제작년도</string>
    <string name="standard">규격</string>
    <string name="collected_year">수집년도</string>
    <string name="mtrl_technic">재료 및 기법</string>
    <string name="title_favorite_tab">즐겨찾기</string>
    <string name="collection">소장품</string>
    <string name="mnft_year_ascending_order">제작년도 오름차순</string>
    <string name="mnft_year_descending_order">제작년도 내림차순</string>
    <string name="confirm">확인</string>
    <string name="empty_collections">추가된 소장품이 없습니다.</string>
    <string name="clear_collection">전체 삭제</string>
    <string name="alert_clear_collection">소장품을 전부 삭제할까요?</string>
    <string name="custom_dialog_cancel">취소</string>
    <string name="custom_dialog_confirm">확인</string>
    <string name="entire_sector">전체</string>
    <string name="sector_not_selected">부문 미선택</string>

</resources>