<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginHorizontal="34dp"
        android:background="@drawable/border_custom_dialog"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/tv_dialog_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.D1"
            tools:text="@string/alert_clear_collection"
            android:textColor="@color/G1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:textAppearance="@style/TextAppearance.D2"
            android:stateListAnimator="@null"
            android:text="@string/custom_dialog_cancel"
            android:textAlignment="center"
            android:textColor="@color/G2"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_dialog_confirm"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="13dp"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:textAppearance="@style/TextAppearance.D2"
            android:text="@string/custom_dialog_confirm"
            android:textColor="@color/G2"
            app:layout_constraintBottom_toBottomOf="@id/btn_dialog_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dialog_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_dialog_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>



