<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.artventure.artventure.util.UiState" />

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.artventure.artventure.presentation.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screen.FavoriteFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guide_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guide_end" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title_favorite_tab"
            android:textAppearance="@style/TextAppearance.H1"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/collection"
            android:textAppearance="@style/TextAppearance.H3"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_collections"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
            tools:listitem="@layout/item_collection" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_clear_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toTopOf="@id/tv_sub_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_sub_title"
            android:text="@string/clear_collection"
            android:textAppearance="@style/TextAppearance.D2"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_empty_collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_box" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_empty_collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/empty_collections"
            android:textAppearance="@style/TextAppearance.D1"
            android:textColor="@color/G4"
            app:layout_constraintEnd_toEndOf="@id/iv_empty_collections"
            app:layout_constraintStart_toStartOf="@id/iv_empty_collections"
            app:layout_constraintTop_toBottomOf="@id/iv_empty_collections" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_empty_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="iv_empty_collections,tv_empty_collections" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>